# mdexec

./: README.md  pyproject.toml
examples/: example.md
src/mdexec/: executor.py  main.py  markdown.py  markdown_io.py  tables.py  types.py
tests/mdexec/: test_markdown.py  test_markdown_io.py  test_tables.py
